--- a/policy.html
+++ b/policy.html
@@ -32,7 +32,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">Latest update: December 30, 2017</div>
-            <div class="col-md-6"><a href="/policy/bot/legal">Show the complete Privacy Policy</a></div>
+            <div class="col-md-6"><a href="legal.html">Show the complete Privacy Policy</a></div>
 
         </div>
     </div>
